# iot_backend

./: .gitignore  MEJORAS.md  README.md  RECIPE.md  architecture.md  connect.md  db.md  docs.md  endpoint.md
.cursor/commands/: fastapi-developer.md
.cursor/rules/: fastapi.mdc
backend/: README.md
backend/iot_monitor/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  verify-docker.sh
backend/iot_monitor/alembic/: env.py
backend/iot_monitor/alembic/versions/: 001_initial_migration.py  ad4df8caa493_change_device_state_from_float_to_string.py
backend/iot_monitor/app/: main.py
backend/iot_monitor/app/api/: api_v1.py
backend/iot_monitor/app/api/dependencies/: auth.py
backend/iot_monitor/app/api/routers/: auth.py  roles.py  users.py
backend/iot_monitor/app/api/schemas/: auth.py  roles.py  users.py
backend/iot_monitor/app/core/: config.py  rate_limit.py  security.py
backend/iot_monitor/app/db/: base.py
backend/iot_monitor/app/db/models/: __init__.py  branch.py  business.py  device.py  device_type.py  login_audit.py  machine.py  report.py  revoked_token.py  role.py  sensor.py  sensor_type.py  time_data.py  user.py
backend/iot_monitor/app/iot_data/: router.py  schemas.py  service.py  time_data_service.py
backend/iot_monitor/app/mqtt/: __init__.py  client.py  schemas.py
backend/iot_monitor/app/services/: roles.py  users.py
backend/iot_monitor/tests/: __init__.py  conftest.py  test_device_register.py  test_iot_router.py  test_main.py
backend/specs/: 00_contracts.md  01_setup.md
frontend/: index.html
